src/components/Preview.css
:root {
    /* preview-div border radius */
    --preview-div-br: 1rem;
}
#preview-div {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto 1fr;
    grid-template-areas:
        "header"
        "controls"
        "preview";

    align-content: stretch;
    align-items: stretch;

    border-top: medium solid transparent;

    border-top-right-radius: var(--preview-div-br);

    box-shadow: 1px 1px 2rem 1px darkgray;
}
#preview-header {
    grid-area: header;
    text-align: center;

    margin: 0;
    padding: 1rem;

    /* border-bottom: medium solid rgba(211, 211, 211, 0.5); */
    font-family: var(--sans-serif);
}
#preview {
    font-family: var(--sans-serif);
    grid-area: preview;
    overflow-x: scroll;
    padding-left: 2rem;
    box-shadow: 1px 0.5rem 2rem 1px darkgray;
}

/* markdown `---` translated to <hr/> */
#preview hr {
    border: none;
    border-top: medium solid;
}
@media only screen and (max-width: 767px) {
    #preview-div {
        box-shadow: -0em 1em 2em -0.1em darkgray;
        border: none;
        border-top-left-radius: var(--preview-div-br);
    }
    #preview {
        grid-column: 1;
        grid-row: 3;
    }
}

